fix(iam): fix policies display on small resolution
ref: DTRSD-121521

--- a/packages/manager/modules/iam/src/iam.styles.scss
+++ b/packages/manager/modules/iam/src/iam.styles.scss
@@ -8,4 +8,8 @@
       padding: 0.5rem 1.5rem;
     }
   }
+
+  .oui-checkbox__label {
+    word-break: break-word;
+  }
 }
